# inzite-v2

./: package.json  turbo.json
.github/workflows/: services-ci.yml
apps/dashboard/: .env.example  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/components/: auth-form.tsx  sign-out-button.tsx
apps/dashboard/db/: index.ts  schema.ts
apps/services/: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  eval_set.json  package.json  pyproject.toml  run_evals.py
apps/services/src/: app.py
apps/services/src/agents/: base.py  competitor_scout.py  paper_miner.py  tech_paper_miner.py  trend_scraper.py
apps/services/src/app/: artifacts.py  config.py  db_models.py  main.py  worker.py
apps/services/src/app/api/: routes_chat.py  routes_research.py
apps/services/src/core/: checkpoint.py  pipeline.py  retry.py  schemas.py
apps/services/src/core/graph/: builder.py
apps/services/src/core/graph/nodes/: intent_parser.py  rag_index.py  report_builder.py  research_fanout.py  strategy_engine.py  task_planner.py
apps/services/src/core/llm/: gemini_client.py  groq_client.py
apps/services/src/core/rag/: __init__.py  embeddings.py  qdrant_store.py  reranker.py  retriever.py
apps/services/src/schemas/: competitor.py
apps/services/tests/: conftest.py  test_agents.py  test_api.py  test_artifacts.py  test_graph_smoke.py  test_groq_client.py  test_intent_parser.py  test_schemas.py  test_strategy_engine.py  test_task_planner.py
apps/web/: package.json
(+11 files in other folders)
