[project]
name = "services"
version = "0.1.0"
description = "FastAPI service for the LangGraph startup research agent."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.139.0",
    "httpx>=0.27.2",
    "langfuse>=2.51.3",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-postgres>=1.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.11.2",
    "rank-bm25>=0.2.2",
    "redis>=5.0.8",
    "sqlalchemy[asyncio]>=2.0.35",
    "tavily-python>=0.5.0",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
